# text-to-sql-gbt

./: .env  .gitignore  code.py  context.sql  dev.sql  dev_questions.txt  evaluation.py  exec_eval.py  finetuned.py  finetunedtesting.py  get_tables.py  newText.txt  parse_context.py  parse_dev.py  predicted_select.txt  pyproject.toml
app/: backend.py  frontend.py
evaluations/: dev_gold_sql.txt  predicted_select.txt
preprocess/: get_tables.py  parse_raw_json.py
