[tool.poetry]
name = "test-suite-sql-eval"
version = "0.1.0"
description = ""
authors = ["Zhi He <zhihe122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.52.2"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"
sqlparse = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
